# django-template

./: .gitignore  Dockerfile  Makefile  Readme.md  pyproject.toml
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/products/: handlers.py
core/apps/common/: models.py
core/apps/products/: admin.py  apps.py
core/apps/products/migrations/: 0001_initial.py
core/apps/products/models/: products.py
core/project/: urls.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
