[tool.poetry]
name = "django-example"
version = "0.1.0"
description = ""
authors = ["Artem <vebulogmetra@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-environ = "^0.11.2"
psycopg2-binary = "2.9.6"
django-ninja = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 90
force_grid_wrap = 2

[tool.black]
line-length = 90
target-version = ['py310']

[tool.flake8]
exclude = [".git", ".pytest_cache", "tests", "__pycache__", "env", "venv", ".venv"]
max-line-length = 90
max-complexity = 8
ignore = ["W503"]
